RUTUBE-3: add app center positioning and width clamping

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,8 @@
 @import "variables/globals";
 
 :root {
+    width: clamp(100px, 100%, 1053px);
+    margin: 0 auto;
     background-color: var(--bg);
 
     * {
