--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -11,5 +11,8 @@
         margin: 0;
         outline: 0;
         padding: 0;
+
+        font-family: var(--font);
+        color: var(--main-txt);
     }
 }
