--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
     --main-txt: #fff;
     --pale-txt: #BFC9D4;
     --rating-accent-color: #1F73F9;
     --bg: #14191F;
+    --font: 'Roboto'
 }
