RUTUBE-6: add hover active pseudoclasses and transition to button component

--- a/src/shared/UI/Button/Button.module.scss
+++ b/src/shared/UI/Button/Button.module.scss
@@ -6,7 +6,17 @@
     line-height: 20px;
     font-size: 14px;
     text-align: center;
-    
+    cursor: pointer;
+    transition: filter 0.1s linear;
+
+    &:hover {
+        filter: brightness(1.1);
+    }
+
+    &:active {
+        filter: brightness(0.8);
+    }
+
     &.fixed {
         width: 222px;
     }
