RUTUBE-6: fix semantic markup issues and add some styles according to fixed markup

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -16,3 +16,13 @@
         color: var(--main-txt);
     }
 }
+
+main {
+
+    section {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
